my first commit

--- a/Resume/index.html
+++ b/Resume/index.html
@@ -12,7 +12,7 @@
      
         <br>
         <br>
-      <h1>Resume</h1>
+      <h1>This is my Resume</h1>
       <br><p>
        AKSHATA VENKATESH NAIK  <br>
         Contact: +91 9972030784 <br>
